--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,6 @@ serde_json = "1.0"
 clap = { version = "4.5.52", features = ["derive"] }
 inotify = "0.11.0"
 regex = "1.12.2"
+
+[features]
+dev = []
