--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ serde_json = "1.0"
 clap = { version = "4.5.52", features = ["derive"] }
 inotify = "0.11.0"
 regex = "1.12.2"
+sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
+chrono = "0.4.42"
 
 [features]
 dev = []
