--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ inotify = "0.11.0"
 regex = "1.12.2"
 sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
 chrono = "0.4.42"
+similar = "2.7.0"
 
 [features]
 dev = []
