--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ clap = { version = "4.5.52", features = ["derive"] }
 inotify = "0.11.0"
 regex = "1.12.2"
 sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }
-chrono = "0.4.42"
+chrono = { version = "0.4.42", features = ["serde"] }
 similar = "2.7.0"
 log = { version = "0.4", features = ["std"] }
 tracing  = { version = "0.1.41", features = [ "async-await" ] }
